force-app/main/default/objects/JobsuiteEchoMediaSettings__c/JobsuiteEchoMediaSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Jobsuite EchoMedia Settings</label>
</CustomObject>