force-app/main/default/objects/JobsuiteEchoMediaSettings__c/fields/Api_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Api_Endpoint__c</fullName>
    <label>Api Endpoint</label>
    <length>200</length>
    <type>Text</type>
</CustomField>