force-app/main/default/objects/JobsuiteEchoMediaSettings__c/fields/BBInvoicePaymentUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>BBInvoicePaymentUpdateTime__c</fullName>
    <label>BBInvoicePayment Update Time</label>
    <type>DateTime</type>
</CustomField>