force-app/main/default/objects/JobsuiteEchoMediaSettings__c/fields/BBInvoiceUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>BBInvoiceUpdateTime__c</fullName>
    <label>BBInvoice Update Time</label>
    <type>DateTime</type>
</CustomField>